# parallel_comp

./: .gitignore  README.md
exe_files/: blur  cache_latency  cpuid_info  matrix_mul_release  measure_lr1
lr_1/: analyzer.py  lr1.cpp  lr1_windows.cpp
lr_1/data/: data.txt  data_optimized.txt  data_windows.txt
lr_2/: calc_stats.py  matrix_mul.cpp  matrix_mul_debug
lr_2/matrix_mul_debug.dSYM/Contents/: Info.plist
lr_2/matrix_mul_debug.dSYM/Contents/Resources/DWARF/: matrix_mul_debug
lr_3/: cpuid_info.c  output.txt
lr_4/: cache_latency.c  plot.py  results.csv
lr_5/: CMakeLists.txt  results_debug.txt  results_release.txt
lr_5/include/: avx2.h  common.h  mmx.h  scalar.h  sse.h
lr_5/src/: avx2.cpp  main.cpp  mmx.cpp  scalar.cpp  sse.cpp
lr_7/: benchmark.txt  blur_avx.cpp
lr_7/img_output/: output_simd.pgm
lr_8/: 01_main.cpp  01_vec_add.cu  02_gpu_info.cu  03_bandwidth.cu  04_main.cpp  04_main.cu  04_matmul.cu  04_matmul_cpu.cpp  lr8_notebook.ipynb  results.csv  tmp_output.txt
